# ChezSchemeC

./: .gitignore  CMakeLists.txt  Makefile  README.md  compress-io.c  io.c  make build log.txt  scheme.c
boot/a6osx/: petite.boot  scheme.boot  scheme.h
